src/deployment/argocd/fe/test-deployment.yaml
#  RMIT University Vietnam
#  Course: COSC2767 Systems Deployment and Operations
#  Semester: 2024C
#  Assessment: Assignment 2
#  Author: Le Dinh Ngoc Quynh
#  ID: s3791159
#  Created  date: 10 Jan 2025
#  Last modified: 10 Jan 2025
apiVersion: apps/v1
kind: Deployment
metadata:
  name: debug-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: debug-pod
  template:
    metadata:
      labels:
        app: debug-pod
    spec:
      containers:
        - name: debug-container
          image: nicolaka/netshoot
          command: ["sleep", "3600"] # Keeps the container running
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
