src/deployment/argocd/fe/monitoring-ingress.yaml
#  RMIT University Vietnam
#  Course: COSC2767 Systems Deployment and Operations
#  Semester: 2024C
#  Assessment: Assignment 2
#  Author: Le Dinh Ngoc Quynh
#  ID: s3791159
#  Created  date: 10 Jan 2025
#  Last modified: 10 Jan 2025
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    # Required annotations for AWS ALB
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/group.name: monitoring-ingress-group
    alb.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: alb
  rules:
    - host:
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
